[gd_scene load_steps=8 format=3 uid="uid://1vsjqwkprn18"]

[ext_resource type="Script" uid="uid://gkc0htmbmget" path="res://Scenes/Lobby/ReadyChip.gd" id="1_jqs34"]
[ext_resource type="PackedScene" uid="uid://c41m7jqool3bh" path="res://Classes/CustomUI/InputDisplayTexture/InputDisplaySprite3D/InputDisplaySprite3D.tscn" id="2_10537"]
[ext_resource type="PackedScene" uid="uid://cq5gqlwg77y81" path="res://Classes/BetDisplay/ficha_mesh.tscn" id="2_snnl7"]
[ext_resource type="PackedScene" uid="uid://j5k0g855uc38" path="res://Classes/BorderHintArea/BorderHintArea.tscn" id="4_ppffs"]

[sub_resource type="ViewportTexture" id="ViewportTexture_ppffs"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nft4e"]
resource_local_to_scene = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tq8nx"]
height = 0.178534
radius = 0.309402

[node name="ReadyChip" type="CharacterBody3D"]
collision_mask = 7
script = ExtResource("1_jqs34")
grabDistance = 0.4
affectedByGravity = true

[node name="InputDisplaySprite3d" parent="." instance=ExtResource("2_10537")]
transform = Transform3D(0.7, 0, 0, 0, -3.059797e-08, 0.7, 0, -0.7, -3.059797e-08, -0.7961488, 0, 0)
texture = SubResource("ViewportTexture_ppffs")

[node name="FichaMesh" parent="." instance=ExtResource("2_snnl7")]
transform = Transform3D(0.35, 0, 0, 0, 0.032, 0, 0, 0, 0.35, 0, 0, 0)
surface_material_override/0 = SubResource("StandardMaterial3D_nft4e")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_tq8nx")

[node name="PlayerHintDetection" parent="." node_paths=PackedStringArray("meshes", "pushable") instance=ExtResource("4_ppffs")]
meshes = [NodePath("../FichaMesh")]
pushable = NodePath("..")
